[package]
name = "multitags_bin"
version = "0.1.0"
authors = ["Richard Stewing <richard.stewing@udo.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap/" }



[dependencies.multitags_lib]
git = "https://github.com/haetze/multitags_lib"
rev = "06e67e5ee9ddb5b7382dc1b78bb9953b4c566311"


[[bin]]
name = "mt"
path = "src/main.rs"