[package]
name = "multitags_bin"
version = "0.2.0"
authors = ["Richard Stewing <richard.stewing@udo.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap/" }



[dependencies.multitags_lib]
git = "https://github.com/haetze/multitags_lib"
rev = "bd3c51a89aa2b7ba9a0752094f8348d5c6558b83"


[[bin]]
name = "mt"
path = "src/main.rs"